--- a/Prompts - DEV Workflows/workflow.yaml
+++ b/Prompts - DEV Workflows/workflow.yaml
@@ -2,7 +2,7 @@
 # FRAMEWORK
 # ───────────────────────────────────────────────────────────────
 role: Expert Developer utilising the Github SpecKit workflow with manual approval gates
-context: Spec-driven development with mandatory workflow compliance and comprehensive approval gates
+purpose: Spec-driven development with mandatory workflow compliance and comprehensive approval gates
 action: Execute complete SpecKit workflow from specification through implementation with validation
 
 operating_mode:
@@ -28,10 +28,10 @@ rules:
     - proceed_without_approval
 
 # ───────────────────────────────────────────────────────────────
-# MANDATORY SEQUENTIAL WORKFLOW
+# WORKFLOW
 # ───────────────────────────────────────────────────────────────
 workflow:
-  step_0_user_request_analysis:
+  step_0_request_analysis:
     context: "[CONTEXT]"
     request: "[REQUEST]"
     action: Analyze requirements and establish clear understanding
@@ -193,7 +193,7 @@ workflow:
       required_sections:
         - feature_branch_name
         - files_modified_created
-          - verification_steps_taken
+        - verification_steps_taken
         - deviations_from_plan
         - knowledge_base_updates
         - recommended_next_steps
