--- a/Prompts - DEV Workflows/context_request_extractor.yaml
+++ b/Prompts - DEV Workflows/context_request_extractor.yaml
@@ -14,123 +14,51 @@ operating_mode:
 # ───────────────────────────────────────────────────────────────
 # WORKFLOW
 # ───────────────────────────────────────────────────────────────
-step_0_request_analysis:
-    context: "[CONTEXT]"
-    request: "[REQUEST]"
-    action: Analyze requirements and establish clear understanding
-    outputs:
-      - requirement_summary
-      - approach_overview
-      - complexity_assessment
-    validation: understanding_confirmed
-    approval_gate:
-      type: USER_APPROVAL_REQUIRED
-      prompt: "Requirements analyzed. Proceed to pre-work review?"
-      confirmation_needed: true
+step_0_analysis:
+  context: "[CONTEXT]"
+  request: "[REQUEST]"
+  outputs: requirement_summary | approach | complexity
+  gate: "Requirements analyzed. Proceed?"
 
-standard_mode:
-  target: automated_workflow.yaml step_0
-  replacements:
-    - "[CONTEXT]" -> context snippet
-    - "[REQUEST]" -> request snippet
+targets:
+  standard: automated_workflow.yaml step_0 → [CONTEXT]/[REQUEST]
+  debug: code_review.yaml phase_0 → debug_context/debug_request
 
-debug_mode:
-  target: code_review.yaml phase_0
-  replacements:
-    - initial_context -> debug context snippet
-    - investigation_scope -> debug request snippet
+step_1_identify:
+  type: feature|bug|enhancement|investigation
+  details: errors|configs|code_refs
+  environment: URLs|paths|state
+  implicit: assumptions|dependencies
 
-step_1_analysis:
-  identify:
-    - request_type: feature|bug|enhancement|investigation
-    - technical_details: errors, configs, code references
-    - environment_info: URLs, paths, system state
-    - implicit_context: assumptions, dependencies
+step_2_context:
+  extract:
+    - environment: staging/production/local
+    - current_state: existing_functionality
+    - stack: technologies
+    - dependencies: systems|services|modules
+    - constraints: limitations|requirements
+    - previous_work: if_applicable
 
-step_2_context_extraction:
-  structure:
-    environment: staging/production URLs, local setup
-    current_state: what exists now
-    technical_stack: relevant technologies
-    dependencies: systems, services, modules
-    constraints: limitations, requirements
-    previous_work: if applicable
-
-  output_format: |
+  format: |
     # CONTEXT
     Environment: {url_or_environment}
-    Current State: {existing_functionality}
-    Technical Stack: {technologies_in_use}
-    Related Systems: {connected_components}
-    Dependencies: {critical_dependencies}
-    Constraints: {known_limitations}
+    State: {existing} | Stack: {tech} | Dependencies: {critical}
+    Constraints: {limitations} | Related: {components}
 
-step_3_request_extraction:
-  structure:
-    objective: clear single-sentence goal
-    type: categorization
-    scope: included/excluded
-    requirements:
-      functional: what it must do
-      technical: how it should work
-      ux: user-facing needs
-    success_criteria: definition of done
-    validation: how to test
+step_3_request:
+  extract:
+    - objective: single_sentence_goal
+    - type: categorization
+    - scope: included/excluded
+    - requirements: functional|technical|ux
+    - success: definition_of_done
+    - validation: test_approach
 
-  output_format: |
+  format: |
     # REQUEST
-    Objective: {primary_goal}
-    Type: {feature|bugfix|enhancement|investigation}
-    Scope: {what_is_included}
-    Requirements:
-      - Functional: {core_functionality}
-      - Technical: {implementation_needs}
-      - UX: {user_experience}
-    Success Criteria: {how_we_know_its_done}
-    Testing: {verification_approach}
-
-# ───────────────────────────────────────────────────────────────
-# DEBUG MODE EXTRACTION
-# ───────────────────────────────────────────────────────────────
-debug_detection:
-  triggers:
-    - keywords: error, bug, broken, failing, not working
-    - patterns: performance issue, unexpected behavior
-    - indicators: stack traces, error messages
-
-  debug_context_format: |
-    # DEBUG CONTEXT
-    Issue Type: {error|performance|behavior|regression}
-    Symptoms: {what_is_observed}
-    Expected: {correct_behavior}
-    Actual: {current_behavior}
-    Reproducibility: {always|sometimes|once}
-    Environment: {where_occurring}
-    Error Messages: {if_any}
-    Recent Changes: {if_known}
-
-  debug_request_format: |
-    # DEBUG REQUEST
-    Investigation: {what_to_investigate}
-    Fix Required: {specific_fix_needed}
-    Root Cause: {suspected_or_unknown}
-    Priority: {critical|high|medium|low}
-    Validation: {testing_approach}
-
-# ───────────────────────────────────────────────────────────────
-# EXTRACTION PATTERNS
-# ───────────────────────────────────────────────────────────────
-patterns:
-  context_indicators:
-    urls: "http(s)?://[^\s]+" → Environment
-    file_paths: "(/[^/\s]+)+\.(js|ts|css|html)" → Related files
-    error_keywords: "error|exception|failed" → Debug mode
-    technical_terms: "API|database|component" → Technical context
-
-  request_indicators:
-    action_verbs: "add|create|fix|implement|debug" → Primary action
-    requirements: "should|must|need to|required" → Requirements
-    scope_limits: "only|specifically|excluding" → Scope boundaries
+    Objective: {goal} | Type: {category} | Scope: {boundaries}
+    Requirements: Functional[{core}] Technical[{implementation}] UX[{user_facing}]
+    Success: {criteria} | Testing: {verification}
 
 # ───────────────────────────────────────────────────────────────
 # OUTPUT EXAMPLES
